<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:padding="4dip"
    android:gravity="center_horizontal"
    android:layout_width="match_parent" 
    android:layout_height="match_parent">

    <TextView
            android:id="@+id/description_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="top|center_horizontal" 
            android:text="@string/title_configurations"/>
    
    	<TextView
            android:id="@+id/description_config_server_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0" 
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="top|center_horizontal"
            android:text="@string/config_title_server_address"/>
    
        <EditText
        android:id="@+id/edittext_config_server_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
        
        
        <Button android:id="@+id/config_button_save" 
        android:text="@string/button_save_config"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:onClick="onButtonClicked"/>
        
        <Button android:id="@+id/config_button_cancel" 
        android:text="@string/button_cancel_config"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:onClick="onButtonClicked"/>

</LinearLayout>
